Fixed overflow issue

--- a/css/editor.css
+++ b/css/editor.css
@@ -1,7 +1,7 @@
 body {
     font-family: Monospace;
     margin: 0px;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .controls__color-palette {
